--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -1,6 +1,7 @@
 #contact-container{
     max-width: 800px;
-    margin: 50px auto;
+    margin: 30px auto;
+    padding: 8px;
 }
 
 #contact-header{
