--- a/src/components/ResourceCard.css
+++ b/src/components/ResourceCard.css
@@ -8,4 +8,18 @@
     display: flex;
     flex-direction: row;
     gap: 12px;
+    flex-wrap: wrap;
+}
+
+.tag-row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4px;
+}
+.rs-tag{
+    margin: 0px !important;
+}
+
+.contributor-name{
+    text-align: right;
 }
